--- a/style1.css
+++ b/style1.css
@@ -1072,6 +1072,17 @@ h3 {
 
 @media only screen and (max-width: 667px){
 
+  .risersandfallers{
+    padding-top: 30px;
+    margin-bottom: -10px;
+    padding-left: 3vw;
+    display: flex;
+    margin-left: 0vw;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: bottom;
+  
+  }
+
 
   .recuadrocabecera{
     display: flex;
@@ -1092,7 +1103,7 @@ h3 {
   }
 
   .recuadroDentro2{
-    padding-left: 1vw;
+    padding-left: 3vw;
     padding-right: 0px;
 
   }
@@ -1133,7 +1144,7 @@ h3 {
   section{
     display: flex;
     flex-direction: column;   
-    padding-left: 0.2vw;
+    padding-left: 3vw;
     padding-right: 0px;
     margin-left: 0vw;
     display: block;
@@ -1156,7 +1167,7 @@ h3 {
       margin: 0;
       padding: 0;
       padding-top: 17px;
-      padding-left: 1vw;
+      padding-left: 3vw;
       text-align: left;
       color: rgb(39, 67, 117);;
       font-size: 17px;
@@ -1166,7 +1177,7 @@ h3 {
   
       h2 {
         margin: 0;
-        padding-left: 1vw;
+        padding-left: 3vw;
         padding-top: 15px;
         text-align: left;
         color: rgb(39, 67, 117);
@@ -1176,28 +1187,31 @@ h3 {
           background-color: white;
       }
       h3 {
-        text-align: left;
+        margin-right: 0px;
         margin: 0;
         padding-top: 5px;
-        padding-left: 1vw;
-        text-align: center;
+        padding-left: 3vw;
+        text-align: left;
         color: rgb(39, 67, 117);
         font-size: 13px;
         font-family: Arial, Helvetica, sans-serif;
         transition: 0.5s font-size linear;
           background-color: white;
+          width: 45vw;
       }
 
       .h3first {
+        margin-right: 0px;
         margin: 0;
         padding-top: 5px;
-        padding-left: 0vw;
-        text-align: center;
+        padding-left: 3vw;
+        text-align: left;
         color: rgb(39, 67, 117);
         font-size: 13px;
         font-family: Arial, Helvetica, sans-serif;
         transition: 0.5s font-size linear;
           background-color: white;
+          width: 45vw;
       }
     
       header{
@@ -1212,7 +1226,11 @@ h3 {
       }
 
   
+      .forMobile{
+        align-items: flex;
+        flex-direction: row;
 
+      }
       .sectionContenedora{
         padding-top: 1vw;
         display: block;
@@ -1220,8 +1238,36 @@ h3 {
       .sectionContenedora2{
         flex-direction: row;
         align-items: flex-start;
-        padding-top: 1vw;
+        padding-top: 3vw;
         display: block;
+      }
+
+      .tableindices{
+        width: 95%;
+      }
+
+      .divShares{
+        display: flex;
+        flex-direction: column;   
+        margin-left: 3vw;
+        margin-right: 2vw;
+        padding-left: 0vw;
+        padding-right: 0vw;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 95vw;
+        height: 250px;
+      }
+      
+      .divShares2{
+        display: flex;
+        flex-direction: column;   
+        margin-left: 3vw;
+        margin-right: 0vw;
+        padding-left: 0vw;
+        padding-right: 0vw;
+        font-family: Arial, Helvetica, sans-serif;
+        width: 95vw;
+        height: 250px;
       }
 
 }
