--- a/style1.css
+++ b/style1.css
@@ -889,13 +889,30 @@ h3 {
     display: flex;
     flex-direction:column;   
     font-family: Arial, Helvetica, sans-serif;
-    min-width: 16vw;
+    min-width: 20vw;
     height: 30px;
   }
   
   .buscador{
     height: 30px;
-    width: 16vw;
+    width: 20vw;
+  }
+
+  .row{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 8px;
+    text-decoration: none;
+    overflow: visible;
+    display: flex;
+    flex-direction: column;   
+    padding-top: 8px;
+    padding-left: 8vw;
+    font-family: Arial, Helvetica, sans-serif;
+    min-width:157px;
+    width: auto;
+    height: 9px;
+    background-color: rgba(245, 245, 245, 0.849)
+  
   }
 
   .tableindices{
