--- a/style3.css
+++ b/style3.css
@@ -9,7 +9,7 @@ header{
   padding-top: 1vw;
   padding-left: 15%;
   padding-bottom: 0.01vw;
-  background-color: #124734;
+  background-color: #FF6110;
 
 }
 
@@ -21,7 +21,7 @@ header{
   margin-left: 0px;
   padding-left: 0vw;
   padding-bottom: 0.01vw;
-  background-color: #124734;
+  background-color: #FF6110;
   height: 100px;
 }
 
@@ -35,7 +35,7 @@ header{
   font-size: 1.6vw;
   font-family: Arial, Helvetica, sans-serif;
     transition: 0.5s font-size linear;
-    background-color: #124734;
+    background-color: #FF6110;
 
 }
 
@@ -44,7 +44,7 @@ nav {
   padding-left: 7vw;
   padding-top: 50px;
   justify-content: space-between;
-  background-color: #124734;
+  background-color: #FF6110;
 }
 
 
@@ -216,7 +216,7 @@ margin-top: -20px;
   text-align: left;
   width: 45vw;
   height: 110px;
-  background-color: #58be30;
+  background-color: rgb(212, 173, 154);
 }
 
 .recuadroDentro{
@@ -243,7 +243,7 @@ margin-top: -20px;
   .botonInvest {
     background-color:#7892c2;
     border-radius:25px;
-    border:4px solid #124734;
+    border:4px solid #FF6110;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -276,7 +276,7 @@ margin-top: -20px;
 }
 
 .modal__header{
-  background-color: #124734;
+  background-color: #FF6110;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
@@ -399,7 +399,7 @@ h1 {
   padding-top: 15px;
   width: 30vw;  
   text-align: left;
-  color: #124734;
+  color: #FF6110;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -410,7 +410,7 @@ h2 {
   margin: 0;
   padding-top: 15px;
   text-align: center;
-  color: #124734;
+  color: #FF6110;
   font-size: 22px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -421,7 +421,7 @@ h3 {
   padding-top: 5px;
   padding-left: 2vw;
   text-align: center;
-  color: #124734;
+  color: #FF6110;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -433,7 +433,7 @@ h3 {
   padding-top: 5px;
   padding-left: 0vw;
   text-align: center;
-  color: #124734;
+  color: #FF6110;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -541,7 +541,7 @@ div{
   font-size:0.8vw ;
   width: 12vw;
   height: 30px;
-  color: #124734;
+  color: #FF6110;
 }
 
 
@@ -700,7 +700,7 @@ tr td.tdbis {
 }
 
 tr td.tdsecondbis {
-  background-color: #58be30;
+  background-color: rgb(212, 173, 154);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -853,7 +853,7 @@ h3 {
     font-size:1.1vw ;
     width: 17vw;
     height: 30px;
-    color: #124734;
+    color: #FF6110;
   }
 
 
@@ -874,7 +874,7 @@ h3 {
   .botonInvest {
     background-color:#7892c2;
     border-radius:25px;
-    border:4px solid #124734;
+    border:4px solid #FF6110;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -981,7 +981,7 @@ h3 {
     padding-top: 18px;
     margin-left: 0vw;
     text-align: left;
-    color: #124734;
+    color: #FF6110;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     transition: 0.5s font-size linear;
@@ -991,7 +991,7 @@ h3 {
       margin: 0;
       padding-top: 15px;
       text-align: center;
-      color: #124734;
+      color: #FF6110;
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
@@ -1002,7 +1002,7 @@ h3 {
       padding-top: 5px;
       padding-left: 2vw;
       text-align: center;
-      color: #124734;
+      color: #FF6110;
       font-size: 14px;
       font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
@@ -1014,7 +1014,7 @@ h3 {
       padding-top: 5px;
       padding-left: 0vw;
       text-align: center;
-      color: #124734;
+      color: #FF6110;
       font-size: 14px;
       font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
@@ -1031,7 +1031,7 @@ h3 {
     text-align: left;
     width: 60.5vw;
     height: 110px;
-    background-color: #58be30;
+    background-color: rgb(212, 173, 154);
   }
 
   .recuadroDentro{
@@ -1075,7 +1075,7 @@ h3 {
     font-size: 1.6vw;
     font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
-      background-color: #124734;
+      background-color: #FF6110;
   
   }
 
@@ -1098,7 +1098,7 @@ h3 {
     text-align: left;
     width: 88vw;
     height: 110px;
-    background-color: #58be30;
+    background-color: rgb(212, 173, 154);
   }
 
   .recuadroDentro{
@@ -1237,7 +1237,7 @@ h3 {
       border-radius: 8px;
       align-self: center;
       border-collapse: collapse;
-      border: 1px solid #124734;
+      border: 1px solid #FF6110;
       letter-spacing: 1px;
       font-size: 1rem;
       font-family: Arial, Helvetica, sans-serif;
@@ -1249,7 +1249,7 @@ h3 {
       padding-top: 17px;
       padding-left: 3vw;
       text-align: left;
-      color: #124734;
+      color: #FF6110;
       font-size: 17px;
       font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
@@ -1260,7 +1260,7 @@ h3 {
         padding-left: 3vw;
         padding-top: 15px;
         text-align: left;
-        color: #124734;
+        color: #FF6110;
         font-size: 15px;
         font-family: Arial, Helvetica, sans-serif;
         transition: 0.5s font-size linear;
@@ -1272,7 +1272,7 @@ h3 {
         padding-top: 5px;
         padding-left: 3vw;
         text-align: left;
-        color: #124734;
+        color: #FF6110;
         font-size: 13px;
         font-family: Arial, Helvetica, sans-serif;
         transition: 0.5s font-size linear;
@@ -1286,7 +1286,7 @@ h3 {
         padding-top: 5px;
         padding-left: 3vw;
         text-align: left;
-        color: #124734;
+        color: #FF6110;
         font-size: 13px;
         font-family: Arial, Helvetica, sans-serif;
         transition: 0.5s font-size linear;
@@ -1298,7 +1298,7 @@ h3 {
         text-align: center;
         padding-top: 1vw;
         padding-bottom: 2vw;
-        background-color: #124734;
+        background-color: #FF6110;
       
       }
       .cabecera {
@@ -1366,7 +1366,7 @@ h3 {
     padding-left: 0vw;
     padding-top: 50px;
     justify-content: space-between;
-    background-color: #124734;
+    background-color: #FF6110;
 }
 
 .divtopflops {
@@ -1426,7 +1426,7 @@ h3 {
   font-size:2vw ;
   width: 20vw;
   height: 40px;
-  color: #124734;
+  color: #FF6110;
   margin-top: px;
 }
 
@@ -1434,7 +1434,7 @@ h3 {
   margin-top: 40px;
   background-color:#7892c2;
   border-radius:10px;
-  border:4px solid #124734;
+  border:4px solid #FF6110;
   display:inline-block;
   cursor:pointer;
   color: #ffffff;
@@ -1447,7 +1447,7 @@ h3 {
 }
 
 .modal__header{
-  background-color: #124734;
+  background-color: #FF6110;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
