--- a/style3.css
+++ b/style3.css
@@ -1507,7 +1507,7 @@ h3 {
   align-self: auto;
   padding-left: 3vw;
   width: 90%;
-  margin-right:%;
+  margin-right:2%;
 }
 
 .fundamentalsshare{
