--- a/style3.css
+++ b/style3.css
@@ -241,7 +241,7 @@ margin-top: -20px;
 
 
   .botonInvest {
-    background-color:#7892c2;
+    background-color:rgb(214, 121, 74);
     border-radius:25px;
     border:4px solid #FF6110;
     display:inline-block;
@@ -872,7 +872,7 @@ h3 {
   }
 
   .botonInvest {
-    background-color:#7892c2;
+    background-color:rgb(214, 121, 74);
     border-radius:25px;
     border:4px solid #FF6110;
     display:inline-block;
@@ -882,7 +882,7 @@ h3 {
     font-size:1vw;
     padding:15px 3vw;
     text-decoration:none;
-    text-shadow:0px 1px 0px #283966;
+    text-shadow:0px 1px 0px rgb(214, 121, 74);
   }
 
   .buscadorYresultados{
@@ -1432,7 +1432,7 @@ h3 {
 
 .botonInvest {
   margin-top: 40px;
-  background-color:#7892c2;
+  background-color:rgb(214, 121, 74);
   border-radius:10px;
   border:4px solid #FF6110;
   display:inline-block;
@@ -1443,7 +1443,7 @@ h3 {
   padding: 10px 9vw;
   text-align: left;
   text-decoration:none;
-  text-shadow:0px 1px 0px #283966;
+  text-shadow:0px 1px 0px rgb(214, 121, 74);
 }
 
 .modal__header{
